--- a/index.html
+++ b/index.html
@@ -1,1 +1,41 @@
 
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css">
+    <title>Carter's Christmas List</title>
+</head>
+<body>
+    <h1>Carter's Christmas List</h1>
+    <br>
+    <table>
+        <tr>
+            <th>Item</th>
+            <th>Link</th>
+            <th>Price</th>
+        </tr>
+        <tr>
+            <td>Bambu Labs A1 3D Printer Bundle</td>
+            <td><a href="https://bambulab.com/en-us/a1">https://bambulab.com/en-us/a1</a></td>
+            <td>$449.00</td>
+        </tr>
+        <tr>
+            <td>Mark Rober Hack Pack Subscription</td>
+            <td><a href="https://www.crunchlabs.com/products/hack-pack-subscription?product-handle=hp-subscription-paid-annually">https://www.crunchlabs.com/products/hack-pack</a></td>
+            <td>$399.95</td>
+        </tr>
+        <tr>
+            <td>White Bambu Labs Filament</td>
+            <td><a href="https://us.store.bambulab.com/products/pla-basic-filament?variant=41078274687112">https://us.store.bambulab.com/products/pla-basic-filament?variant=41078274687112</a></td>
+            <td>$22.99</td>
+        </tr>
+        <tr>
+            <td>Red Bambu Labs Filament</td>
+            <td><a href="https://us.store.bambulab.com/products/pla-basic-filament?variant=40475107000456">https://us.store.bambulab.com/products/pla-basic-filament?variant=40475107000456</a></td>
+            <td>$22.99</td>
+        </tr>
+    </table>
+</body>
+</html>
